manifests/nginx-service-blue.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-blue
spec:
  selector:
    app: app-blue
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
