manifests/nginx-service-green.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service-green
spec:
  selector:
    app: app-green
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
