manifests/nginx-ingress-blue.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-service-blue-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - host: mylab.local # Substitua pelo seu domínio ou IP
      http:
        paths:
          - path: /blue
            pathType: Prefix
            backend:
              service:
                name: app-service-blue
                port:
                  number: 8080
