manifests/nginx-ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  # annotations:
  #   traefik.ingress.kubernetes.io/service-weights: |
  #     app-service-blue: 50%
  #     app-service-green: 50%
  name: canary-ingress
spec:
  ingressClassName: traefik
  rules:
  - host: mylab.local
    http:
      paths:
        - path: /blue
          pathType: Prefix
          backend:
            service:
              name: app-service-blue-ingress
              port:
                number: 80
        - path: /green
          pathType: Prefix
          backend:
            service:
              name: app-service-green-ingress
              port:
                number: 80
